; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_iba6110.c_ipath_ht_ib_updown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_iba6110.c_ipath_ht_ib_updown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_devdata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ipath_devdata*, i32, i32)* @ipath_ht_ib_updown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipath_ht_ib_updown(%struct.ipath_devdata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ipath_devdata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ipath_devdata* %0, %struct.ipath_devdata** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ipath_devdata*, %struct.ipath_devdata** %4, align 8
  %8 = load %struct.ipath_devdata*, %struct.ipath_devdata** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @ipath_ib_linkstate(%struct.ipath_devdata* %8, i32 %9)
  %11 = load %struct.ipath_devdata*, %struct.ipath_devdata** %4, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @ipath_ib_linktrstate(%struct.ipath_devdata* %11, i32 %12)
  %14 = call i32 @ipath_setup_ht_setextled(%struct.ipath_devdata* %7, i32 %10, i32 %13)
  ret i32 0
}

declare dso_local i32 @ipath_setup_ht_setextled(%struct.ipath_devdata*, i32, i32) #1

declare dso_local i32 @ipath_ib_linkstate(%struct.ipath_devdata*, i32) #1

declare dso_local i32 @ipath_ib_linktrstate(%struct.ipath_devdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
